--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
       ■語学:英語（TOEIC:815点）<br>
         学生時代にカナダ・トロント大学へ交換留学生として約10か月留学した経験あり。実務でも使用していたため、ビジネスレベルでも使用可能です。<br>
       ■その他<br>
-        -サッカー部部長(会社内部活動)。社内・社外イベント開催などを中心に実施。2017~20192017~2019<br>
+        -サッカー部部長(会社内部活動)。社内・社外イベント開催などを中心に実施。<br>
         -イベントの主な内容:社内フットサル大会の開催（参加者30~40名程度）/取引先を含めた4社でのサッカー大会の開催（参加者100名程度）<br>
-      上記約8年間の営業を経験し、改めて自身のやりたいこと・活かせるスキルを見つめなおした結果、プログラミングに関わる職業に興味を持ちました。<br>
-      そこで早速、Progateでプログラミングを学習を開始し、2019年9月よりTECH::EXPERTにて本格的にプログラミング学習を本格的に開始。<br>
-      卒業後も現職と並行してのプログラミング学習を継続しております。<br>
-      日々の学習内容については、Twitter/Qiitaにてアウトプットしておりますので、もしよろしければ、ご参照いただけますと幸いです。<br>
+      ■自己PR<br>
+        自身の強みとしては、「目標に対して、努力を継続して行うことができる」ことです。<br>
+        大学生時代、自身の英語力は殆ど無かった状態で、海外旅行すらしたこともございませんでしたが、大学の学習に加えて英語の学習をスタートし、1年後には大学の交換留学生として、カナダ・トロント大学へ留学。<br>
+        英語力向上に加え、現地にて様々な国籍の学生と過ごすことで、文化の違いなども学ぶことができました。<br>
+        また、社会人生活が始まってからは、営業として新規開拓や売上・利益の結果を残すために、社内はもちろん、顧客とも様々な交渉を通じて新規案件の獲得や売上・利益が年間で会社内トップの顧客を担当することもできました。<br>
+        さらに、プログラマを目指してからは、通常業務に加え、平日2〜3時間・休日8~10時間の学習を半年以上継続しております。<br>
+        結果、プログラミングに対する知識ゼロの状態から、自身でもサイトを作成する力を身につけました。<br>
+        このような強みを今後も活かしていきたいと考えております。<br>
   </p>
   </section>
   <section class="works" id="works">
