--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         学生時代にカナダ・トロント大学へ交換留学生として約10か月留学した経験あり。実務でも使用していたため、ビジネスレベルでも使用可能です。<br>
       ■その他<br>
         -サッカー部部長(会社内部活動)。社内・社外イベントなどを中心に開催。<br>
-        -イベントの主内容:社内フットサル大会開催（参加者30~40名程度）/取引先を含めた4サッカー大会の開催（参加者100名程度）<br>
+        -イベントの主内容:社内フットサル大会開催（参加者30~40名程度）/取引先を含めたサッカー大会の開催（参加者100名程度）<br>
       ■自己PR<br>
         自身の強みとしては、「目標に対して、努力を継続して行うことができる」ことです。<br>
         大学生時代、自身の英語力は殆ど無かった状態で、海外旅行すらしたこともございませんでしたが、大学の学習に加えて英語の学習をスタートし、1年後には大学の交換留学生として、カナダ・トロント大学へ留学。<br>
