コンタクトアドレス追加

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   <section class="contact" id="contact">
     <h2 class="heading">Output/Contact</h2>
-    <p class="contact-title-sub">-----Twitterにてご連絡頂けますと幸いです-----</p>
+    <p class="contact-title-sub">-----Twitterもしくメールにてご連絡頂けますと幸いです-----</p>
     <div class="contact-wrapper">
       <div class="contact-icon">
         <a href="https://qiita.com/Tatsu88"><img src="images/qiita.png" width="100px;" /></a>
@@ -95,4 +95,5 @@
         <a href="https://lapras.com/public/TBYDGBS"><img src="images/lapras.jpg" width="100px;" /></a>
       </div>
     </div>
+    <a class="mail" href="mailto:tatsu88tokyo@gmail.com">メールはこちら</a>
   </section>
