メールリンク：色修正２

--- a/index.html
+++ b/index.html
@@ -95,5 +95,5 @@
         <a href="https://lapras.com/public/TBYDGBS"><img src="images/lapras.jpg" width="100px;" /></a>
       </div>
     </div>
-    <a class="mail" href="mailto:tatsu88tokyo@gmail.com">メールはこちら</a>
+    <a class="mail" href="mailto:tatsu88tokyo@gmail.com" style="color:black">メールはこちら</a>
   </section>
